--- a/src/components/Evolution.css
+++ b/src/components/Evolution.css
@@ -1,12 +1,14 @@
 .bs-callout {
-    padding: 20px;
-    margin: 20px 0;
     border-left: 1px solid #eee;
     border-left-width: 5px;
-
 }
-.bs-callout h4 {
+.bs-callout p {
+	margin-left: 10px;
+}
+
+.bs-callout h6 {
     margin-top: 0;
+    margin-left: 10px;
     margin-bottom: 5px;
 }
 .bs-callout p:last-child {
